Structuct basic html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,34 @@
     <link rel="stylesheet" href="./StylesMF.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="container">
+            <h2 class="title">
+                Juego del ahorcado
+            </h1>
+        </div>
+    </header>
     <main>
         <section>
             <div class="head"></div>
+            <div class="chest"></div>
+            <div class="arm left"></div>
+            <div class="leg left"></div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="bar">
+            <ul class="list">
+                <li class="item">jared0192@gamil.com</li>
+                <li class="item">Oracle Next Education</li>
+                <li class="item">
+                    <a href="https://github.com/jared0192galicia"><img src="./gitHub.jpg" alt="Imagen ancla" class="git"></a>
+                </li>
+                <li class="item">México</li>
+                <li class="item"></li>
+            </ul>
+        </section>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
