--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </div>
     </header>
     <main>
-        <section>
-            <div class="head"></div>
-            <div class="chest"></div>
-            <div class="arm left"></div>
-            <div class="leg left"></div>
+        <section class="person">
+            <div class="head pz"></div>
+            <div class="chest pz"></div>
+            <div class="arm left pz"></div>
+            <div class="leg left pz"></div>
         </section>
     </main>
     <footer>
