--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
         <section class="person">
             <div class="head pz"></div>
             <div class="chest pz"></div>
+            <div class="arm pz"></div>
             <div class="arm left pz"></div>
+            <div class="leg pz"></div>
             <div class="leg left pz"></div>
+        </section>
+        <section class="frase">
+            
         </section>
     </main>
     <footer>
